--- a/index.scss
+++ b/index.scss
@@ -4,6 +4,8 @@
 
 @import 'variables';
 
+
+
 * {
     margin: 0;
     box-sizing: border-box;
@@ -39,6 +41,7 @@ a {
     text-decoration: none;
     color: $white;
 }
+
 
 button {
     background: none;
@@ -169,21 +172,34 @@ button {
 
     .btn {
         text-align: center;
-        padding: 1em 2em;
+        padding: 0.8em 2em;
         width: 40%;
         margin: 2.5rem auto;
         border: 1px solid $black;
         text-transform: $uppercase;
-        letter-spacing: 0.2em;
+        letter-spacing: 0.3em;
         cursor: pointer;
-        
+        transition: all 400ms linear;
+    }
+
+    .btn:hover {
+        background-color: $black;
+        color: $white
+    }
+
+    .desktop-btn {
+        display: none;
     }
 
     .creation-grid {
         .grid {
-            margin-bottom: 0.5em;
+            margin-bottom: 0.7em;
             position: relative;
             z-index: -10;
+            background-color: $primary;
+            opacity: .8;
+            cursor: pointer;
+
     
             img {
                 width : 100%;
@@ -245,7 +261,7 @@ button {
 
 @media screen and (min-width:700px) {
     .header {
-        background: url(/loopstudios-landing-page-main/images/desktop/image-hero.jpg) no-repeat center;
+        background: url(../images/desktop/image-hero.jpg) no-repeat center;
         background-size: cover;
         padding: 2em 10%;
     }
@@ -257,11 +273,6 @@ button {
     h1 {
         width: 70%;
     }
-
-    
-    
-
-    
 }
 
 @media screen and (min-width:850px) {
@@ -301,9 +312,7 @@ button {
             transition: all 300ms linear;
         }
 
-        a:hover {
-            color: $secondary;
-        }
+        
     }
 
     .vr-section {
@@ -318,6 +327,29 @@ button {
             height: 70%;
         }
 
+        @mixin keyframes($animation-name) {
+            @-webkit-keyframes #{$animation-name} {
+              @content;
+            }
+            @keyframes #{$animation-name} {
+              @content;
+            }
+          }
+          
+          @mixin animation($str) {
+            -webkit-animation: #{$str};
+            animation: #{$str};
+          }
+          
+          @include keyframes(fade) {
+            from {
+              top: 0px;
+            }
+            to {
+              top: 15%;
+            }
+          }
+
         .vr-details {
             position: absolute;
             background-color: $white;
@@ -327,13 +359,45 @@ button {
             padding: 5% 8%;
             // height: 60%;
             text-align: left;
+            @include animation('bounce 5s infinite');
         }
+
+
+
+        
+
+
     
     }
 
     .creations-section {
         width: 85%;
         margin:  0 auto;
+
+        h2 {
+            margin: 0;
+        }
+
+        .creation-flex {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2em;
+        }
+
+        .btn {
+            width: 20%;
+            
+        }
+
+        .desktop-btn {
+            margin: 0;
+            display: inline-block;
+        }
+
+        .mobile-btn {
+            display: none;
+        }
 
         
         .creation-grid {
